--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -24,7 +24,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/data"
             ],
             "styles": [
               "./node_modules/bootstrap/scss/bootstrap.scss",
